fix columns gap

--- a/src/components/display-tasks/tasks.module.css
+++ b/src/components/display-tasks/tasks.module.css
@@ -7,7 +7,7 @@
 .container .wrapper {
   display: flex;
   justify-content: space-between;
-  gap: 50px;
+  gap: 20px;
   width: 940px;
   color: var(--lightest-gray);
 }
